Java 21 (#4799)
* Java 21

* Use Java 21 features

* Fix?

* Minor formatting